--- a/gradle.properties
+++ b/gradle.properties
@@ -2,20 +2,20 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/use
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
-loader_version=0.14.17
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.9
+loader_version=0.14.21
 
 #Fabric api
-fabric_version=0.76.0+1.19.4
+fabric_version=0.84.0+1.20.1
 
 # Mod Properties
-mod_version=1.7.0
-mod_id=smoothboot
-mod_desc=Improve Minecraft CPU scheduling.
-maven_group=io.github.ultimateboomer
+mod_version=0.1.0
+mod_id=threadtweak
+mod_desc=Improve and tweak Minecraft CPU scheduling (again!)
+maven_group=com.github.getchoo
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-mod_menu_version=4.0.4
+mod_menu_version=7.1.0
