--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,20 +21,22 @@ jobs:
             17, # Current Java LTS & minimum supported by Minecraft
           ]
         # and run on both Linux and Windows
-        os: [ubuntu-20.04, windows-2022]
+        os: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v1
 
       - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: "temurin"
           java-version: ${{ matrix.java }}
+          cache: "gradle"
 
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
@@ -45,7 +47,7 @@ jobs:
 
       - name: capture build artifacts
         if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from latest java on one OS
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: Artifacts
           path: build/libs/
