--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.2
-loader_version=0.15.1
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.1
+loader_version=0.15.11
 
 #Fabric api
-fabric_version=0.91.2+1.20.4
+fabric_version=0.98.0+1.20.6
 
 # Mod Properties
 mod_version=0.1.2
@@ -18,4 +18,4 @@ maven_group=com.github.getchoo
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-mod_menu_version=7.1.0
+mod_menu_version=10.0.0-beta.1
