--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
 loader_version=0.15.11
 
-#Fabric api
-fabric_version=0.98.0+1.20.6
+# Fabric API
+fabric_version=0.100.7+1.21
 
 # Mod Properties
-mod_version=0.1.3
+mod_version=0.1.4
 mod_id=threadtweak
 mod_desc=Improve and tweak Minecraft CPU scheduling (again!)
 maven_group=com.github.getchoo
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-mod_menu_version=10.0.0-beta.1
+mod_menu_version=11.0.1
