--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
-loader_version=0.16.2
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
+loader_version=0.16.9
 
 # Fabric API
-fabric_version=0.102.1+1.21.1
+fabric_version=0.107.0+1.21.3
 
 # Mod Properties
-mod_version=0.1.5
+mod_version=0.1.6
 mod_id=threadtweak
 mod_desc=Improve and tweak Minecraft CPU scheduling (again!)
 maven_group=com.github.getchoo
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-mod_menu_version=11.0.1
+mod_menu_version=12.0.0-beta.1
