--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.13
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.17.2
 
 # Fabric API
-fabric_version=0.119.9+1.21.5
+fabric_version=0.133.0+1.21.8
 
 # Mod Properties
-mod_version=0.1.7
+mod_version=0.1.8
 mod_id=threadtweak
 mod_desc=Improve and tweak Minecraft CPU scheduling (again!)
 maven_group=com.github.getchoo
 
 # Dependencies
 ## https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu
-mod_menu_version=14.0.0-rc.2
+mod_menu_version=15.0.0
