--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.3
-loader_version=0.18.1
-loom_version=1.14-SNAPSHOT
+minecraft_version=1.21.11
+yarn_mappings=1.21.11+build.4
+loader_version=0.18.4
 
 # Fabric API
-fabric_version=0.138.3+1.21.10
+fabric_version=0.141.1+1.21.11
 
 # Mod Properties
 mod_version=0.1.7
@@ -19,4 +18,4 @@ maven_group=com.github.getchoo
 
 # Dependencies
 ## https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu
-mod_menu_version=16.0.0-rc.1
+mod_menu_version=17.0.0-beta.2
